[tool.poetry]
name = "pay_ccavenue"
version = "0.1.2"
description = "A simple library to setup payment integration with CCAvenue"
authors = ["Kuldeep Pisda <22424149+kdpisda@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pycryptodome = "3.12.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pre-commit = "^2.16.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
